--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+  <script src="script.js"></script>
   <div class="container">
     <div class="navbar">
       <a href="index.html"> <img src="img/Fundo2.png" class="logo"> </a>
@@ -65,9 +67,74 @@ Toti Diversidade que trabalha com Migrantes, fui formado no curso de Front-End e
 <br>
 <br>
 <iframe width="400" height="300" src="https://www.youtube.com/embed/Kg44OCFhmwU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/CuP1EvHejcc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="300" src="https://www.youtube.com/embed/CuP1EvHejcc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+  </div>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br>
 
 
+  <!--começo de códigos de carocel-->
+  <div class="slider">
+    <div class="slides">
+      <!--radio Buttons-->
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+      <input type="radio" name="radio-btn" id="radio4">
+      <!--radio Buttons-->
+
+
+      <!--slides images-->
+      <div class="slide first">
+        <img src="img/carocel 1.png" alt="imagem 1" />
+      </div>
+
+      <div class="slide">
+        <img src="img/carocel 2.png" alt="imagem 2" />
+      </div>
+
+      <div class="slide">
+        <img src="img/carocel 3.png" alt="imagem 3" />
+      </div>
+
+      <div class="slide">
+        <img src="img/carocel 4.jpg" alt="imagem 4" />
+      </div>
+      <!--slides images-->
+
+      <!--Navigation auto-->
+      <div class="navigation-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+      </div>
+
+
+<div class="manual-navigation">
+  <label for="radio1" class="manual-btn"></label>
+  <label for="radio2" class="manual-btn"></label>
+  <label for="radio3" class="manual-btn"></label>
+  <label for="radio4" class="manual-btn"></label>
+</div>
+
+
+    </div>
   </div>
 
 </body>
